--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "babel-register": "^6.18.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.0.0",
+    "normalize.css": "^5.0.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "pg-native": "^1.10.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.1",
     "react-route": "^1.0.3",
     "react-router": "^3.0.0",
